@@ -32,7 +32,7 @@
 
   <properties>
     <suite.name>passing</suite.name>
-    <tomee.opts>-Xmx2g</tomee.opts>
+    <tomee.opts>-Xmx4g</tomee.opts>
   </properties>
 
   <dependencies>
@@ -262,17 +262,5 @@
       </plugin>
     </plugins>
   </build>
-
-  <profiles>
-    <profile>
-      <id>java8</id>
-      <activation>
-        <jdk>1.8</jdk>
-      </activation>
-      <properties>
-        <tomee.opts>-Xmx3096m -XX:PermSize=512m -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled</tomee.opts>
-      </properties>
-    </profile>
-  </profiles>
 
 </project>
